<resources>
    <string name="app_name">Smart Helmet</string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Sign Up</string>
    <string name="click_to_login">Sign in</string>
    <string name="click_to_loginn">Sign in</string>
    <string name="clicktologin">Sign in</string>
    <string name="click_to_register">Sign up</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="alert_tones">Alert Tones</string>
    <string name="test_tone">Test Tone</string>
    <string name="save_selection">Save Selection</string>
    <string name="select_alert_tone">Select Alert Tone</string>
    <string name="choose_alert_tone">Choose an alert tone for drowsiness detection:</string>
</resources>